elastic/kafka/ingressroute-kibana.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kibana.seedslabs.io`)
    kind: Rule
    services:
    - name: kibana-kibana
      port: 5601
