elastic/kafka/ingressroute-zookeeper.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zookeeper
  namespace: elastic
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`zookeeper.seedslabs.io`)
    kind: Rule
    services:
    - name: zookeeper
      port: 2181
